log.txt
Welcome to fish, the friendly interactive shell
Type [32mhelp(B[m for instructions on how to use fish
[?2004h]0;fish /home/jobins/Documents/Programming/Rust/lpm[30m(B[m[92mjobins(B[m@(B[mKara(B[m [32m~/D/P/R/lpm(B[m (dev)(B[m> [K[31Ccargo check[42C[11D[38;5;26mcargo[30m(B[m [38;5;39mcheck[42C[30m(B[m
[30m(B[m[?2004l]0;cargo check /home/jobins/Documents/Programming/Rust/lpm[30m(B[m[0m[0m[1m[32m    Checking[0m lpm v0.1.0 (/home/jobins/Documents/Programming/Rust/lpm)
[0m[1m[38;5;9merror[0m[0m[1m: expected `,`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/cli.rs:31:7[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m24[0m[0m [0m[0m[1m[38;5;12m| [0m[0m    enums::Command::Plugin {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m    [0m[0m[1m[38;5;12m----------------------[0m[0m [0m[0m[1m[38;5;12mwhile parsing the fields for this pattern[0m
[0m[1m[38;5;12m...[0m
[0m[1m[38;5;12m31[0m[0m [0m[0m[1m[38;5;12m| [0m[0m      list,[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m      [0m[0m[1m[38;5;9m^^^^[0m

[0m[1m[38;5;9merror[E0425][0m[0m[1m: cannot find value `install` in this scope[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/cli.rs:34:11[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m34[0m[0m [0m[0m[1m[38;5;12m| [0m[0m      if !install.is_empty() {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m          [0m[0m[1m[38;5;9m^^^^^^^[0m[0m [0m[0m[1m[38;5;9mnot found in this scope[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: consider importing this function[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m3[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m[38;5;10muse crate::cli::package::install;[0m
[0m   [0m[0m[1m[38;5;12m|[0m

[0m[1m[38;5;9merror[E0425][0m[0m[1m: cannot find value `install` in this scope[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/cli.rs:35:37[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m35[0m[0m [0m[0m[1m[38;5;12m| [0m[0m        package::install("plugins", install)?;[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m                                    [0m[0m[1m[38;5;9m^^^^^^^[0m[0m [0m[0m[1m[38;5;9mnot found in this scope[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: consider importing this function[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m3[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m[38;5;10muse crate::cli::package::install;[0m
[0m   [0m[0m[1m[38;5;12m|[0m

[0m[1m[38;5;9merror[E0423][0m[0m[1m: expected value, found built-in attribute `link`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/cli.rs:36:18[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m36[0m[0m [0m[0m[1m[38;5;12m| [0m[0m      } else if !link.is_empty() {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m                 [0m[0m[1m[38;5;9m^^^^[0m[0m [0m[0m[1m[38;5;9mnot a value[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: consider importing this function instead[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[3